[GREEN] Implement createpaymentCOD